--- a/index.html
+++ b/index.html
@@ -49,34 +49,8 @@
         </div>
     </section>
     <section id="portfolio" class="portfolio">
-    <h2 class="section-title">Student Work</h2>
-    
-    <div class="filter-buttons">
-        <button class="filter-btn active" data-filter="all">All</button>
-        <button class="filter-btn" data-filter="cad">Digital CAD</button>
-        <button class="filter-btn" data-filter="pattern">Pattern Making</button>
-        <button class="filter-btn" data-filter="illustration">Illustration</button>
-    </div>
-
-    <div class="gallery-grid">
-        <div class="gallery-item" data-category="cad">
-            <img src="assets/gallery-1.jpg" alt="Student CAD Work">
-            <div class="item-overlay">3D Evening Gown Render</div>
-        </div>
-        <div class="gallery-item" data-category="pattern">
-            <img src="assets/gallery-2.jpg" alt="Pattern Drafting">
-            <div class="item-overlay">Technical Jacket Draft</div>
-        </div>
-        <div class="gallery-item" data-category="illustration">
-            <img src="assets/gallery-3.jpg" alt="Fashion Illustration">
-            <div class="item-overlay">Mixed Media Croquis</div>
-        </div>
-        <div class="gallery-item" data-category="cad">
-            <img src="assets/gallery-4.jpg" alt="CLO3D Simulation">
-            <div class="item-overlay">Digital Fabric Simulation</div>
-        </div>
-    </div>
-</section>
+    <div id="student-gallery" class="gallery-grid"></div>
+    </section>
 <section id="enroll" class="enrollment-section">
     <div class="enroll-container">
         <h2 class="section-title">Course Enrollment</h2>
