Remove duplicate HTML content and fix structure
Fixed duplicate sections and ensured proper HTML structure.

--- a/index.html
+++ b/index.html
@@ -48,8 +48,10 @@
             </div>
         </div>
     </section>
-    <section id="portfolio" class="portfolio">
-    <div id="student-gallery" class="gallery-grid"></div>
+    <section id="student-work">
+    <h2>Student Gallery</h2>
+    <div id="student-gallery" class="gallery-grid">
+        </div>
     </section>
 <section id="enroll" class="enrollment-section">
     <div class="enroll-container">
@@ -217,4 +219,5 @@
 </div>
 <script src="script.js"></script>
 </body>
+
 </html>
