--- a/index.html
+++ b/index.html
@@ -48,12 +48,14 @@
             </div>
         </div>
     </section>
-    <section id="student-work">
-    <h2>Student Gallery</h2>
-    <div id="student-gallery" class="gallery-grid">
-        </div>
-    </section>
-<section id="enroll" class="enrollment-section">
+    <section id="student-work" class="section">
+    <div class="container">
+        <h2 class="section-title">Student Masterpieces</h2>
+        <p class="section-subtitle">A glimpse into the creativity of our graduates</p>
+        
+        <div id="student-gallery" class="gallery-grid"></div>
+    </div>
+</section>
     <div class="enroll-container">
         <h2 class="section-title">Course Enrollment</h2>
         <div class="form-layout">
@@ -219,5 +221,4 @@
 </div>
 <script src="script.js"></script>
 </body>
-
 </html>
