--- a/index.html
+++ b/index.html
@@ -155,5 +155,9 @@
     <button id="scrollTopBtn"><i class="fas fa-arrow-up"></i></button>
 
     <script src="script.js"></script>
+    <div id="imageZoom" class="zoom-overlay" onclick="closeZoom()">
+    <span class="close-zoom">&times;</span>
+    <img id="zoomedImg" src="" alt="Zoomed Work">
+    </div>
 </body>
 </html>
