--- a/index.html
+++ b/index.html
@@ -111,9 +111,12 @@
                 <a href="#"><i class="fab fa-whatsapp"></i></a>
             </div>
             <p class="footer-tagline">Where tradition meets the future of design.</p>
+            <!-- NEW popup trigger -->
+            <button id="openPopup" class="btn-subscribe">Join Newsletter</button>
         </div>
     </footer>
 
+    <!-- Course Modal -->
     <div id="courseModal" class="modal-overlay">
         <div class="modal-content">
             <span class="close-modal">×</span>
@@ -134,6 +137,7 @@
         </div>
     </div>
 
+    <!-- Newsletter Popup -->
     <div id="newsletterPopup" class="popup-overlay">
         <div class="popup-content">
             <span class="close-popup">×</span>
@@ -151,12 +155,15 @@
             </div>
         </div>
     </div>
+
     <button id="scrollTopBtn"><i class="fas fa-arrow-up"></i></button>
 
+    <!-- Zoom Overlay -->
     <div id="imageZoom" class="zoom-overlay" onclick="closeZoom()">
          <span class="close-zoom">&times;</span>
          <img id="zoomedImg" src="" alt="Zoomed Work">
     </div>
+
     <script src="script.js"></script>
 </body>
 </html>
