--- a/index.html
+++ b/index.html
@@ -163,6 +163,25 @@
          <span class="close-zoom">&times;</span>
          <img id="zoomedImg" src="" alt="Zoomed Work">
     </div>
+    <!-- Newsletter Popup -->
+    <div id="newsletterPopup" class="popup-overlay">
+    <div class="popup-content">
+        <span class="close-popup">×</span>
+        <div id="popup-form-content">
+            <h2>Elevate Your Craft</h2>
+            <p>Receive our weekly guide on fabric trends and CAD secrets.</p>
+            <form id="newsletterForm">
+                <input type="email" placeholder="Your email address" required>
+                <button type="submit" class="btn-subscribe">Join Now</button>
+            </form>
+        </div>
+        <div id="popup-success-content" style="display: none;">
+            <h2>Welcome to the Studio</h2>
+            <p>Confirmed. Check your inbox shortly.</p>
+        </div>
+    </div>
+</div>
+
 
     <script src="script.js"></script>
 </body>
