--- a/index.html
+++ b/index.html
@@ -181,6 +181,27 @@
         </div>
     </div>
 </div>
+<!-- Enrollment Popup -->
+<div id="enrollPopup" class="popup-overlay">
+  <div class="popup-content">
+    <span class="close-enroll">&times;</span>
+    <h2>Course Enrollment</h2>
+    <p>Select your modules and complete registration below:</p>
+    <form id="enrollForm">
+      <label>
+        <input type="checkbox" name="course" value="450"> Pattern Making & Draping ($450)
+      </label><br>
+      <label>
+        <input type="checkbox" name="course" value="600"> Digital CAD (CLO 3D) ($600)
+      </label><br>
+      <label>
+        <input type="checkbox" name="course" value="350"> Textile & Fabric Science ($350)
+      </label><br>
+      <input type="email" placeholder="Your email address" required><br>
+      <button type="submit" class="btn-enroll">Complete Registration</button>
+    </form>
+  </div>
+</div>
 
 
     <script src="script.js"></script>
