--- a/index.html
+++ b/index.html
@@ -189,30 +189,35 @@
     <p>Please fill in your details and select your modules:</p>
 
     <form id="enrollForm">
-      <!-- Personal Info -->
-      <input type="text" id="firstName" placeholder="First Name" required><br>
-      <input type="text" id="secondName" placeholder="Second Name" required><br>
-      <input type="text" id="thirdName" placeholder="Third Name" required><br>
-      <input type="tel" id="phoneNumber" placeholder="Phone Number" required><br>
-      <input type="email" id="emailAddress" placeholder="Email Address" required><br><br>
+      <!-- Personal Info in two-column grid -->
+      <div class="form-grid">
+        <input type="text" id="firstName" placeholder="First Name" required>
+        <input type="text" id="secondName" placeholder="Second Name" required>
+        <input type="text" id="thirdName" placeholder="Third Name" required>
+        <input type="tel" id="phoneNumber" placeholder="Phone Number" required>
+        <input type="email" id="emailAddress" placeholder="Email Address" required>
+      </div>
 
       <!-- Course Selection -->
       <h3>Select Your Modules</h3>
-      <label><input type="checkbox" name="course" value="450" data-name="Pattern Making & Draping"> Pattern Making & Draping ($450)</label><br>
-      <label><input type="checkbox" name="course" value="600" data-name="Digital CAD (CLO 3D)"> Digital CAD (CLO 3D) ($600)</label><br>
-      <label><input type="checkbox" name="course" value="350" data-name="Textile & Fabric Science"> Textile & Fabric Science ($350)</label><br>
-      <label><input type="checkbox" name="course" value="400" data-name="Fashion Illustration"> Fashion Illustration ($400)</label><br>
-      <label><input type="checkbox" name="course" value="500" data-name="Garment Construction"> Garment Construction ($500)</label><br>
-      <label><input type="checkbox" name="course" value="300" data-name="History of Fashion"> History of Fashion ($300)</label><br><br>
+      <div class="course-list">
+        <label><input type="checkbox" name="course" value="450" data-name="Pattern Making & Draping"> Pattern Making & Draping ($450)</label>
+        <label><input type="checkbox" name="course" value="600" data-name="Digital CAD (CLO 3D)"> Digital CAD (CLO 3D) ($600)</label>
+        <label><input type="checkbox" name="course" value="350" data-name="Textile & Fabric Science"> Textile & Fabric Science ($350)</label>
+        <label><input type="checkbox" name="course" value="400" data-name="Fashion Illustration"> Fashion Illustration ($400)</label>
+        <label><input type="checkbox" name="course" value="500" data-name="Garment Construction"> Garment Construction ($500)</label>
+        <label><input type="checkbox" name="course" value="300" data-name="History of Fashion"> History of Fashion ($300)</label>
+      </div>
 
       <!-- Tuition Summary -->
-      <div id="selectedCourses"><p>Select a module.</p></div>
-      <div class="total-row"><strong>Total:</strong> <span id="totalAmount">$0.00</span></div><br>
+      <div id="selectedCourses" class="summary-box"><p>Select a module.</p></div>
+      <div class="total-row"><strong>Total:</strong> <span id="totalAmount">$0.00</span></div>
 
       <button type="submit" class="btn-enroll">Complete Registration</button>
     </form>
   </div>
 </div>
+
 
 
 
