--- a/index.html
+++ b/index.html
@@ -199,17 +199,38 @@
         <input type="email" id="emailAddress" placeholder="Email Address" required>
       </div>
 
-      <!-- Right Section: Courses -->
-      <div class="enroll-right">
-        <h3>Select Modules</h3>
-        <div class="course-list">
-          <label><input type="checkbox" name="course" value="450" data-name="Pattern Making & Draping"> Pattern Making & Draping ($450)</label>
-          <label><input type="checkbox" name="course" value="600" data-name="Digital CAD (CLO 3D)"> Digital CAD (CLO 3D) ($600)</label>
-          <label><input type="checkbox" name="course" value="350" data-name="Textile & Fabric Science"> Textile & Fabric Science ($350)</label>
-          <label><input type="checkbox" name="course" value="400" data-name="Fashion Illustration"> Fashion Illustration ($400)</label>
-          <label><input type="checkbox" name="course" value="500" data-name="Garment Construction"> Garment Construction ($500)</label>
-          <label><input type="checkbox" name="course" value="300" data-name="History of Fashion"> History of Fashion ($300)</label>
-        </div>
+    <div class="course-list">
+  <label>
+    <input type="checkbox" name="course" value="450" data-name="Pattern Making & Draping">
+    <span>Pattern Making </span>
+    <span>$15</span>
+  </label>
+  <label>
+    <input type="checkbox" name="course" value="600" data-name="Digital CAD (CLO 3D)">
+    <span>Digital CLO 3D</span>
+    <span>$15</span>
+  </label>
+  <label>
+    <input type="checkbox" name="course" value="350" data-name="Textile & Fabric Science">
+    <span>Textile Knowledge</span>
+    <span>$15</span>
+  </label>
+  <label>
+    <input type="checkbox" name="course" value="400" data-name="Fashion Illustration">
+    <span>Fashion Illustration</span>
+    <span>$15</span>
+  </label>
+  <label>
+    <input type="checkbox" name="course" value="500" data-name="Garment Construction">
+    <span>Garment Construction</span>
+    <span>$15</span>
+  </label>
+  <label>
+    <input type="checkbox" name="course" value="300" data-name="History of Fashion">
+    <span>Fashion Styling</span>
+    <span>$15</span>
+  </label>
+</div>
 
         <!-- Tuition Summary -->
         <div id="selectedCourses" class="summary-box"><p>Select a module.</p></div>
@@ -220,8 +241,6 @@
     <button type="submit" class="btn-enroll">Complete Registration</button>
   </div>
 </div>
-
-
 
 
     <script src="script.js"></script>
