--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
     <p>Please fill in your details and select your modules:</p>
 
     <form id="enrollForm" class="enroll-grid">
-      <!-- Left Section: Personal Info -->
+      <!-- Left: Personal info -->
       <div class="enroll-left">
         <h3>Your Details</h3>
         <input type="text" id="firstName" placeholder="First Name" required>
@@ -199,55 +199,51 @@
         <input type="email" id="emailAddress" placeholder="Email Address" required>
       </div>
 
-    <!-- Right Section: Courses + Image -->
-<div class="enroll-right">
-  <h3>Select Modules</h3>
-  <div class="course-list">
-    <label>
-      <input type="checkbox" name="course" value="450" data-name="Pattern Making & Draping">
-      <span>Pattern Making & Draping</span>
-      <span>$450</span>
-    </label>
-    <label>
-      <input type="checkbox" name="course" value="600" data-name="Digital CAD (CLO 3D)">
-      <span>Digital CAD (CLO 3D)</span>
-      <span>$600</span>
-    </label>
-    <label>
-      <input type="checkbox" name="course" value="350" data-name="Textile & Fabric Science">
-      <span>Textile & Fabric Science</span>
-      <span>$350</span>
-    </label>
-    <label>
-      <input type="checkbox" name="course" value="400" data-name="Fashion Illustration">
-      <span>Fashion Illustration</span>
-      <span>$400</span>
-    </label>
-    <label>
-      <input type="checkbox" name="course" value="500" data-name="Garment Construction">
-      <span>Garment Construction</span>
-      <span>$500</span>
-    </label>
-    <label>
-      <input type="checkbox" name="course" value="300" data-name="History of Fashion">
-      <span>History of Fashion</span>
-      <span>$300</span>
-    </label>
-  </div>
+      <!-- Right: Courses + summary -->
+      <div class="enroll-right">
+        <h3>Select Modules</h3>
+        <div class="course-list">
+          <label>
+            <input type="checkbox" name="course" value="15" data-name="Pattern Making & Draping">
+            <span>Pattern Making & Draping</span>
+            <span>$15</span>
+          </label>
+          <label>
+            <input type="checkbox" name="course" value="15" data-name="Digital CAD (CLO 3D)">
+            <span>Digital CAD (CLO 3D)</span>
+            <span>$15</span>
+          </label>
+          <label>
+            <input type="checkbox" name="course" value="15" data-name="Textile & Fabric Science">
+            <span>Textile & Fabric Science</span>
+            <span>$15</span>
+          </label>
+          <label>
+            <input type="checkbox" name="course" value="15" data-name="Fashion Illustration">
+            <span>Fashion Illustration</span>
+            <span>$15</span>
+          </label>
+          <label>
+            <input type="checkbox" name="course" value="15" data-name="Garment Construction">
+            <span>Garment Construction</span>
+            <span>$15</span>
+          </label>
+          <label>
+            <input type="checkbox" name="course" value="15" data-name="History of Fashion">
+            <span>History of Fashion</span>
+            <span>$15</span>
+          </label>
+        </div>
 
-  <!-- Tuition Summary -->
-  <div id="selectedCourses" class="summary-box"><p>Select a module.</p></div>
-  <div class="total-row"><strong>Total:</strong> <span id="totalAmount">$0.00</span></div>
-
-  <!-- Featured Image -->
-  <div class="enroll-image">
-    <img src="assets/popup-img.jpg" alt="Fashion Academy" />
-  </div>
-</div>
+        <div id="selectedCourses" class="summary-box"><p>Select a module.</p></div>
+        <div class="total-row"><strong>Total:</strong> <span id="totalAmount">$0.00</span></div>
+      </div>
+    </form>
 
     <button type="submit" class="btn-enroll">Complete Registration</button>
   </div>
 </div>
+
 
 
     <script src="script.js"></script>
