--- a/index.html
+++ b/index.html
@@ -188,8 +188,7 @@
     <h2>Course Enrollment</h2>
     <p>Please fill in your details and select your modules:</p>
 
-    <form action="https://formspree.io/f/xzdpqzpq" method="POST">
->
+    <form id="enrollForm" class="enroll-grid" action="https://formspree.io/f/xzdpqzpq" method="POST">
       <!-- Left: Personal info -->
       <div class="enroll-left">
         <h3>Your Details</h3>
