--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <li><a href="#home">Home</a></li>
             <li><a href="#courses">Courses</a></li>
             <li><a href="#student-work">Gallery</a></li>
+            <li><a href="dashboard.html" class="cta-mini">Student Dashboard</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
         <a href="#courses" class="cta-mini">Enroll Now</a>
