--- a/dashboard.html
+++ b/dashboard.html
@@ -7,8 +7,44 @@
 </head>
 <body>
   <header>
-    <h1>Welcome to Xarago Fashion Academy Dashboard</h1>
-  </header>
+  <h1>Welcome to Xarago Fashion Academy Dashboard</h1>
+  <p id="studentEmail"></p>
+  <button id="logoutBtn">Logout</button>
+</header>
+
+<script>
+  document.getElementById("logoutBtn").addEventListener("click", async () => {
+    await auth.signOut();
+    window.location.href = "login.html";
+  });
+</script>
+
+  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js"></script>
+
+<script>
+  const firebaseConfig = {
+    apiKey: "YOUR_API_KEY",
+    authDomain: "xarago-academy.firebaseapp.com",
+    projectId: "xarago-academy",
+    storageBucket: "xarago-academy.appspot.com",
+    messagingSenderId: "YOUR_SENDER_ID",
+    appId: "YOUR_APP_ID"
+  };
+
+  const app = firebase.initializeApp(firebaseConfig);
+  const auth = firebase.auth();
+
+  // Redirect if not logged in
+  auth.onAuthStateChanged(user => {
+    if (!user) {
+      window.location.href = "login.html";
+    } else {
+      document.getElementById("studentEmail").innerText = user.email;
+    }
+  });
+</script>
+
 
   <main class="dashboard">
     <!-- Profile Section -->
@@ -83,6 +119,30 @@ document.addEventListener("DOMContentLoaded", async () => {
   }
 });
 </script>
+<!-- Firebase App (core) -->
+<script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js"></script>
+<!-- Firebase Authentication -->
+<script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js"></script>
+<!-- Firebase Firestore -->
+<script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js"></script>
+
+<script>
+  // Your Firebase config (from Firebase Console → Project Settings)
+  const firebaseConfig = {
+    apiKey: "YOUR_API_KEY",
+    authDomain: "xarago-academy.firebaseapp.com",
+    projectId: "xarago-academy",
+    storageBucket: "xarago-academy.appspot.com",
+    messagingSenderId: "YOUR_SENDER_ID",
+    appId: "YOUR_APP_ID"
+  };
+
+  // Initialize Firebase
+  const app = firebase.initializeApp(firebaseConfig);
+  const auth = firebase.auth();
+  const db = firebase.firestore();
+</script>
+
 
 </body>
 </html>
