--- a/dashboard.html
+++ b/dashboard.html
@@ -7,67 +7,62 @@
 </head>
 <body>
   <header>
-  <h1>Welcome to Xarago Fashion Academy Dashboard</h1>
-  <p id="studentEmail"></p>
-  <button id="logoutBtn">Logout</button>
-</header>
+    <h1>Welcome to Xarago Fashion Academy Dashboard</h1>
+    <p id="studentEmail"></p>
+    <button id="logoutBtn">Logout</button>
+  </header>
 
-<script>
-  document.getElementById("logoutBtn").addEventListener("click", async () => {
-    await auth.signOut();
-    window.location.href = "login.html";
-  });
-</script>
-
+  <!-- Firebase SDKs -->
   <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js"></script>
 
-<script>
-  const firebaseConfig = {
-    apiKey: "YOUR_API_KEY",
-    authDomain: "xarago-academy.firebaseapp.com",
-    projectId: "xarago-academy",
-    storageBucket: "xarago-academy.appspot.com",
-    messagingSenderId: "YOUR_SENDER_ID",
-    appId: "YOUR_APP_ID"
-  };
+  <script>
+    // ✅ Your Firebase config (replace placeholders with your real values)
+    const firebaseConfig = {
+      apiKey: "AIzaSyAntZ0xigv-91fR060PrJpdzOkNIEC4xvc",
+      authDomain: "xarago-fashion-academy.firebaseapp.com",
+      projectId: "xarago-fashion-academy",
+      storageBucket: "xarago-fashion-academy.appspot.com",
+      messagingSenderId: "477275067482",
+      appId: "1:477275067482:web:72a5cadb56d2c34526b463",
+      measurementId: "G-6X6WVMZ15K"
+    };
 
-  const app = firebase.initializeApp(firebaseConfig);
-  const auth = firebase.auth();
+    // ✅ Initialize Firebase
+    const app = firebase.initializeApp(firebaseConfig);
+    const auth = firebase.auth();
+    const db = firebase.firestore();
 
-  // Redirect if not logged in
-  auth.onAuthStateChanged(user => {
-    if (!user) {
+    // ✅ Protect dashboard
+    auth.onAuthStateChanged(user => {
+      if (!user) {
+        window.location.href = "login.html";
+      } else {
+        document.getElementById("studentEmail").innerText = user.email;
+      }
+    });
+
+    // ✅ Logout button
+    document.getElementById("logoutBtn").addEventListener("click", async () => {
+      await auth.signOut();
       window.location.href = "login.html";
-    } else {
-      document.getElementById("studentEmail").innerText = user.email;
-    }
-  });
-</script>
-
+    });
+  </script>
 
   <main class="dashboard">
     <!-- Profile Section -->
     <section class="profile">
       <h2>Your Profile</h2>
       <p>Name: Student Name</p>
-      <p>Email: student@example.com</p>
+      <p>Email: <span id="studentEmail"></span></p>
     </section>
 
     <!-- Courses Section -->
     <section class="courses">
       <h2>Your Courses</h2>
       <ul>
-        <li>
-          Pattern Making & Draping
-          <a href="assets/materials/pattern.pdf" target="_blank">📄 PDF</a>
-          <a href="assets/quizzes/pattern-quiz.html" target="_blank">📝 Quiz</a>
-        </li>
-        <li>
-          Digital CAD (CLO 3D)
-          <a href="assets/materials/cad.pdf" target="_blank">📄 PDF</a>
-          <a href="assets/quizzes/cad-quiz.html" target="_blank">📝 Quiz</a>
-        </li>
+        <li>Loading courses...</li>
       </ul>
     </section>
 
@@ -83,66 +78,36 @@
       <h2>Announcements</h2>
       <p>🎉 New module on Draping Techniques released!</p>
     </section>
-    <section class="courses">
-  <h2>Your Courses</h2>
-  <ul>
-    <li>Loading courses...</li>
-  </ul>
-</section>
-
   </main>
+
+  <!-- ✅ Load courses.json -->
   <script>
-document.addEventListener("DOMContentLoaded", async () => {
-  const coursesContainer = document.querySelector(".courses ul");
+    document.addEventListener("DOMContentLoaded", async () => {
+      const coursesContainer = document.querySelector(".courses ul");
 
-  try {
-    const response = await fetch("courses.json");
-    const courses = await response.json();
+      try {
+        const response = await fetch("courses.json");
+        const courses = await response.json();
 
-    coursesContainer.innerHTML = ""; // clear placeholder
+        coursesContainer.innerHTML = ""; // clear placeholder
 
-    courses.forEach(course => {
-      const li = document.createElement("li");
-      li.innerHTML = `
-        <strong>${course.title}</strong> ($${course.price})<br>
-        <a href="${course.materials.pdf}" target="_blank">📄 PDF</a>
-        <a href="${course.materials.quiz}" target="_blank">📝 Quiz</a>
-        <ul>
-          ${course.materials.modules.map(m => `<li>${m}</li>`).join("")}
-        </ul>
-      `;
-      coursesContainer.appendChild(li);
+        courses.forEach(course => {
+          const li = document.createElement("li");
+          li.innerHTML = `
+            <strong>${course.title}</strong> ($${course.price})<br>
+            <a href="${course.materials.pdf}" target="_blank">📄 PDF</a>
+            <a href="${course.materials.quiz}" target="_blank">📝 Quiz</a>
+            <ul>
+              ${course.materials.modules.map(m => `<li>${m}</li>`).join("")}
+            </ul>
+          `;
+          coursesContainer.appendChild(li);
+        });
+      } catch (err) {
+        coursesContainer.innerHTML = "<p>⚠️ Could not load courses.</p>";
+        console.error("Error loading courses.json:", err);
+      }
     });
-  } catch (err) {
-    coursesContainer.innerHTML = "<p>⚠️ Could not load courses.</p>";
-    console.error(err);
-  }
-});
-</script>
-<!-- Firebase App (core) -->
-<script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js"></script>
-<!-- Firebase Authentication -->
-<script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js"></script>
-<!-- Firebase Firestore -->
-<script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js"></script>
-
-<script>
-  // Your Firebase config (from Firebase Console → Project Settings)
-  const firebaseConfig = {
-    apiKey: "YOUR_API_KEY",
-    authDomain: "xarago-academy.firebaseapp.com",
-    projectId: "xarago-academy",
-    storageBucket: "xarago-academy.appspot.com",
-    messagingSenderId: "YOUR_SENDER_ID",
-    appId: "YOUR_APP_ID"
-  };
-
-  // Initialize Firebase
-  const app = firebase.initializeApp(firebaseConfig);
-  const auth = firebase.auth();
-  const db = firebase.firestore();
-</script>
-
-
+  </script>
 </body>
 </html>
