--- a/login.html
+++ b/login.html
@@ -16,26 +16,27 @@
     <p id="loginError" style="color:red; display:none;">Invalid credentials</p>
   </div>
 
-  <!-- Firebase SDKs -->
+  <!-- ✅ Firebase SDKs -->
   <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js"></script>
 
   <script>
-    // Your Firebase config (from Firebase Console → Project Settings)
+    // ✅ Your Firebase config (from Firebase Console → Project Settings → Web App)
     const firebaseConfig = {
-      apiKey: "YOUR_API_KEY",
-      authDomain: "xarago-academy.firebaseapp.com",
-      projectId: "xarago-academy",
-      storageBucket: "xarago-academy.appspot.com",
-      messagingSenderId: "YOUR_SENDER_ID",
-      appId: "YOUR_APP_ID"
+      apiKey: "AIzaSyAntZ0xigv-91fR060PrJpdzOkNIEC4xvc",
+      authDomain: "xarago-fashion-academy.firebaseapp.com",
+      projectId: "xarago-fashion-academy",
+      storageBucket: "xarago-fashion-academy.appspot.com", // fixed domain
+      messagingSenderId: "477275067482",
+      appId: "1:477275067482:web:72a5cadb56d2c34526b463",
+      measurementId: "G-6X6WVMZ15K"
     };
 
-    // Initialize Firebase
+    // ✅ Initialize Firebase
     const app = firebase.initializeApp(firebaseConfig);
     const auth = firebase.auth();
 
-    // Handle login
+    // ✅ Handle login
     document.getElementById("loginForm").addEventListener("submit", async (e) => {
       e.preventDefault();
       const email = document.getElementById("email").value;
