--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
         </ul>
         <a href="#courses" class="cta-mini">Enroll Now</a>
         <li><a href="dashboard.html" class="cta-mini">Student Dashboard</a></li>
+        <a href="login.html" class="dashboard-btn">Go to Student Dashboard</a>
+
     </nav>
 
     <header id="home" class="hero">
