--- a/login.html
+++ b/login.html
@@ -13,6 +13,7 @@
       <input type="password" id="password" placeholder="Password" required>
       <button type="submit">Login</button>
     </form>
+    <p>Don’t have an account? <a href="signup.html">Sign up here</a></p>
     <p id="loginError" style="color:red; display:none;">Invalid credentials</p>
   </div>
 
