--- a/login.html
+++ b/login.html
@@ -17,17 +17,17 @@
     <p id="loginError" style="color:red; display:none;">Invalid credentials</p>
   </div>
 
-  <!-- ✅ Firebase SDKs -->
-  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js"></script>
+  <!-- ✅ Firebase SDKs (compat versions) -->
+  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth-compat.js"></script>
 
   <script>
-    // ✅ Your Firebase config (from Firebase Console → Project Settings → Web App)
+    // ✅ Your Firebase config
     const firebaseConfig = {
       apiKey: "AIzaSyAntZ0xigv-91fR060PrJpdzOkNIEC4xvc",
       authDomain: "xarago-fashion-academy.firebaseapp.com",
       projectId: "xarago-fashion-academy",
-      storageBucket: "xarago-fashion-academy.appspot.com", // fixed domain
+      storageBucket: "xarago-fashion-academy.appspot.com",
       messagingSenderId: "477275067482",
       appId: "1:477275067482:web:72a5cadb56d2c34526b463",
       measurementId: "G-6X6WVMZ15K"
