--- a/signup.html
+++ b/signup.html
@@ -13,14 +13,16 @@
       <input type="password" id="signupPassword" placeholder="Password" required>
       <button type="submit">Sign Up</button>
     </form>
+    <p>Already have an account? <a href="login.html">Login here</a></p>
     <p id="signupError" style="color:red; display:none;"></p>
   </div>
 
-  <!-- Firebase SDKs -->
-  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js"></script>
+  <!-- ✅ Firebase SDKs (compat versions) -->
+  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth-compat.js"></script>
 
   <script>
+    // ✅ Your Firebase config
     const firebaseConfig = {
       apiKey: "AIzaSyAntZ0xigv-91fR060PrJpdzOkNIEC4xvc",
       authDomain: "xarago-fashion-academy.firebaseapp.com",
@@ -31,10 +33,11 @@
       measurementId: "G-6X6WVMZ15K"
     };
 
+    // ✅ Initialize Firebase
     const app = firebase.initializeApp(firebaseConfig);
     const auth = firebase.auth();
 
-    // Handle signup
+    // ✅ Handle signup
     document.getElementById("signupForm").addEventListener("submit", async (e) => {
       e.preventDefault();
       const email = document.getElementById("signupEmail").value;
