--- a/signup.html
+++ b/signup.html
@@ -5,7 +5,7 @@
   <title>Sign Up - Xarago Fashion Academy</title>
   <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="auth-page">
   <div class="signup-box">
     <h2>Create Student Account</h2>
     <form id="signupForm">
