--- a/login.html
+++ b/login.html
@@ -5,7 +5,7 @@
   <title>Login - Xarago Fashion Academy</title>
   <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="auth-page">
   <div class="login-box">
     <h2>Student Login</h2>
     <form id="loginForm">
