--- a/index.html
+++ b/index.html
@@ -1,253 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>XARAGO | Fashion Design Academy</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet">
+  <meta charset="UTF-8">
+  <title>Xarago Fashion Academy</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <!-- Navigation -->
+  <nav class="navbar">
+    <div class="logo">XARAGO</div>
+    <ul class="nav-links">
+      <li><a href="#pillars">Curriculum</a></li>
+      <li><a href="#about">About</a></li>
+      <li><a href="#portfolio">Gallery</a></li>
+      <li><a href="#contact">Contact</a></li>
+      <li><a href="login.html" class="cta-mini">Login</a></li>
+    </ul>
+  </nav>
 
-    <nav class="navbar">
-        <div class="logo">THE XARAGO FASHION ACADEMY</div>
-        <ul class="nav-links">
-            <li><a href="#home">Home</a></li>
-            <li><a href="#courses">Courses</a></li>
-            <li><a href="#student-work">Gallery</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
-        <a href="#courses" class="cta-mini">Enroll Now</a>
-        <a href="login.html" class="dashboard-btn">Go to Student Dashboard</a>
-
-    </nav>
-
-    <header id="home" class="hero">
-        <div class="hero-content">
-            <h1>Master the Architecture of Style</h1>
-            <p>Bridging traditional craftsmanship with digital innovation.</p>
-            <div class="hero-btns">
-                <a href="#courses" class="btn-primary">Explore Courses</a>
-                <a href="#contact" class="btn-secondary">Book a Tour</a>
-            </div>
-        </div>
-    </header>
-
-    <section id="courses" class="pillars">
-        <h2 class="section-title">The Curriculum</h2>
-        <div id="course-container" class="pillar-grid"></div>
-    </section>
-
-    <section id="about" class="about">
-        <div class="about-container">
-            <div class="about-text">
-                <h2>Our Philosophy</h2>
-                <p>We don't just teach you how to make clothes. We teach you how to build a brand. Our studio combines Savile Row precision with 3D digital prototyping.</p>
-            </div>
-            <div class="about-stats">
-                <div><span>500+</span><p>Graduates</p></div>
-                <div><span>100%</span><p>Hands-on</p></div>
-            </div>
-        </div>
-    </section>
-
-    <section id="student-work" class="section">
-        <div class="container">
-            <h2 class="section-title">Student Masterpieces</h2>
-            <p class="section-subtitle">A glimpse into the creativity of our graduates</p>
-            <div id="student-gallery" class="gallery-grid"></div>
-        </div>
-    </section>
-
-    <section id="enroll" class="enroll-container">
-        <h2 class="section-title">Course Enrollment</h2>
-        <div class="form-layout">
-            <div class="course-selection">
-                <h3>Select Your Modules</h3>
-                <label class="course-item">
-                    <input type="checkbox" name="course" value="450" data-name="Pattern Making">
-                    <div class="course-info"><strong>Pattern Making & Draping</strong><span>$450.00</span></div>
-                </label>
-                <label class="course-item">
-                    <input type="checkbox" name="course" value="600" data-name="Digital CAD">
-                    <div class="course-info"><strong>Digital CAD (CLO 3D)</strong><span>$600.00</span></div>
-                </label>
-                <label class="course-item">
-                    <input type="checkbox" name="course" value="350" data-name="Fabric Science">
-                    <div class="course-info"><strong>Textile & Fabric Science</strong><span>$350.00</span></div>
-                </label>
-            </div>
-
-            <div class="enrollment-summary">
-                <h3>Tuition Summary</h3>
-                <div id="selectedList"><p class="empty-msg">Select a module.</p></div>
-                <div class="total-row"><span>Total:</span><span id="totalPrice">$0.00</span></div>
-                <input type="email" placeholder="Designer Email Address" id="enroll-email">
-                <button type="submit" class="btn-enroll">Complete Registration</button>
-            </div>
-        </div>
-    </section>
-
-    <section id="contact" class="contact-section">
-        <h2 class="section-title">Visit the XARAGO FASHION ACADEMY</h2>
-        <div class="contact-grid">
-            <div class="map-container">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d15764.316885376044!2d44.066!3d9.56!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2s!4v1700000000000" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-            </div>
-            <div class="contact-info">
-                <h3>XARAGO HQ</h3>
-                <p>123 Fashion Ave, Boqol-jire District<br>Hargeisa, Somalia</p>
-                <p><strong>Email:</strong> XARAGOFA@gmail.com</p>
-                <p><strong>Phone:</strong> +252 (63) 4197374 </p>
-            </div>
-        </div>
-    </section>
-
-    <footer class="main-footer">
-        <div class="footer-content">
-            <div class="footer-logo">XARAGO</div>
-            <div class="social-picture-links">
-                <a href="#"><i class="fab fa-instagram"></i></a>
-                <a href="#"><i class="fab fa-pinterest"></i></a>
-                <a href="#"><i class="fab fa-whatsapp"></i></a>
-            </div>
-            <p class="footer-tagline">Where tradition meets the future of design.</p>
-            <!-- NEW popup trigger -->
-            <button id="openPopup" class="btn-subscribe">Join Newsletter</button>
-        </div>
-    </footer>
-
-    <!-- Course Modal -->
-    <div id="courseModal" class="modal-overlay">
-        <div class="modal-content">
-            <span class="close-modal">×</span>
-            <div class="modal-body">
-                <div class="modal-image" id="modalImage"></div>
-                <div class="modal-info">
-                    <h2 id="modalTitle">Course Title</h2>
-                    <div class="modal-meta"><span id="modalLevel">Level</span> | <span id="modalDuration">Duration</span></div>
-                    <hr>
-                    <h3>Syllabus Overview</h3>
-                    <ul id="modalSyllabus"></ul>
-                    <div class="modal-footer-action">
-                        <span class="modal-price" id="modalPrice">$0.00</span>
-                        <a href="#enroll" class="btn-enroll-now">Enroll Now</a>
-                    </div>
-                </div>
-            </div>
-        </div>
+  <!-- Hero Section -->
+  <section class="hero">
+    <div>
+      <h1>Fashion Education for Creatives</h1>
+      <a href="signup.html" class="btn-primary">Enroll Now</a>
     </div>
+  </section>
 
-    <!-- Newsletter Popup -->
-    <div id="newsletterPopup" class="popup-overlay">
-        <div class="popup-content">
-            <span class="close-popup">×</span>
-            <div id="popup-form-content">
-                <h2>Elevate Your Craft</h2>
-                <p>Receive our weekly guide on fabric trends and CAD secrets.</p>
-                <form id="newsletterForm">
-                    <input type="email" placeholder="Your email address" required>
-                    <button type="submit" class="btn-subscribe">Join Now</button>
-                </form>
-            </div>
-            <div id="popup-success-content" style="display: none;">
-                <h2>Welcome to the Studio</h2>
-                <p>Confirmed. Check your inbox shortly.</p>
-            </div>
-        </div>
-    </div>
-
-    <button id="scrollTopBtn"><i class="fas fa-arrow-up"></i></button>
-
-    <!-- Zoom Overlay -->
-    <div id="imageZoom" class="zoom-overlay" onclick="closeZoom()">
-         <span class="close-zoom">&times;</span>
-         <img id="zoomedImg" src="" alt="Zoomed Work">
-    </div>
-    <!-- Newsletter Popup -->
-    <div id="newsletterPopup" class="popup-overlay">
-    <div class="popup-content">
-        <span class="close-popup">×</span>
-        <div id="popup-form-content">
-            <h2>Elevate Your Craft</h2>
-            <p>Receive our weekly guide on fabric trends and CAD secrets.</p>
-            <form id="newsletterForm">
-                <input type="email" placeholder="Your email address" required>
-                <button type="submit" class="btn-subscribe">Join Now</button>
-            </form>
-        </div>
-        <div id="popup-success-content" style="display: none;">
-            <h2>Welcome to the Studio</h2>
-            <p>Confirmed. Check your inbox shortly.</p>
-        </div>
-    </div>
-</div>
-<!-- Enrollment Popup -->
-<div id="enrollPopup" class="popup-overlay">
-  <div class="popup-content">
-    <span class="close-enroll">&times;</span>
-    <h2>Course Enrollment</h2>
-    <p>Please fill in your details and select your modules:</p>
-
-    <form id="enrollForm" class="enroll-grid" action="https://formspree.io/f/xzdpqzpq" method="POST">
-      <!-- Left: Personal info -->
-      <div class="enroll-left">
-        <h3>Your Details</h3>
-        <input type="text" id="firstName" placeholder="First Name" required>
-        <input type="text" id="secondName" placeholder="Second Name" required>
-        <input type="text" id="thirdName" placeholder="Third Name" required>
-        <input type="tel" id="phoneNumber" placeholder="Phone Number" required>
-        <input type="email" id="emailAddress" placeholder="Email Address" required>
+  <!-- Curriculum Pillars -->
+  <section id="pillars" class="pillars">
+    <h2>Our Curriculum Pillars</h2>
+    <div class="pillar-grid">
+      <div class="pillar-card" style="background-image:url('assets/pattern.jpg')">
+        <h3>Pattern Making</h3>
       </div>
-
-      <!-- Right: Courses + summary -->
-      <div class="enroll-right">
-        <h3>Select Modules</h3>
-        <div class="course-list">
-          <label>
-            <input type="checkbox" name="course" value="15" data-name="Pattern Making & Draping">
-            <span>Pattern Making & Draping</span>
-            <span>$15</span>
-          </label>
-          <label>
-            <input type="checkbox" name="course" value="15" data-name="Digital CAD (CLO 3D)">
-            <span>Digital CAD (CLO 3D)</span>
-            <span>$15</span>
-          </label>
-          <label>
-            <input type="checkbox" name="course" value="15" data-name="Textile & Fabric Science">
-            <span>Textile & Fabric Science</span>
-            <span>$15</span>
-          </label>
-          <label>
-            <input type="checkbox" name="course" value="15" data-name="Fashion Illustration">
-            <span>Fashion Illustration</span>
-            <span>$15</span>
-          </label>
-          <label>
-            <input type="checkbox" name="course" value="15" data-name="Garment Construction">
-            <span>Garment Construction</span>
-            <span>$15</span>
-          </label>
-          <label>
-            <input type="checkbox" name="course" value="15" data-name="History of Fashion">
-            <span>History of Fashion</span>
-            <span>$15</span>
-          </label>
-        </div>
-
-        <div id="selectedCourses" class="summary-box"><p>Select a module.</p></div>
-        <div class="total-row"><strong>Total:</strong> <span id="totalAmount">$0.00</span></div>
+      <div class="pillar-card" style="background-image:url('assets/cad.jpg')">
+        <h3>Digital CAD</h3>
       </div>
-      
-  <button type="submit" class="btn-enroll">Complete Registration</button>
- </form>
-           <div id="successMessage" class="success-overlay" style="display:none;">
-  <h2>✅ Registration Successful</h2>
-  <p>Thank you for enrolling! We’ll contact you soon with details.</p>
-  </div>
-    
-    <script src="script.js"></script>
+      <div class="pillar-card" style="background-image:url('assets/draping.jpg')">
+        <h3>Draping Techniques</h3>
+      </div>
+    </div>
+  </section>
+
+  <!-- About -->
+  <section id="about" class="about">
+    <div class="about-container">
+      <h2>About Xarago</h2>
+      <p>We blend creativity and technical mastery to empower fashion innovators in Somaliland and beyond.</p>
+    </div>
+  </section>
+
+  <!-- Gallery -->
+  <section id="portfolio" class="portfolio">
+    <h2>Student Work</h2>
+    <div class="gallery-grid">
+      <div class="gallery-item">
+        <div class="gallery-img-container">
+          <img src="assets/work1.jpg" alt="Student Work 1">
+        </div>
+        <div class="work-info">
+          <h4>Evening Dress</h4>
+          <p>Pattern Drafting</p>
+        </div>
+      </div>
+      <div class="gallery-item">
+        <div class="gallery-img-container">
+          <img src="assets/work2.jpg" alt="Student Work 2">
+        </div>
+        <div class="work-info">
+          <h4>Casual Wear</h4>
+          <p>Digital CAD</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Contact -->
+  <section id="contact" class="contact-section">
+    <h2>Contact Us</h2>
+    <div class="contact-grid">
+      <div>
+        <p>Email: info@xaragoacademy.com</p>
+        <p>Phone: +252 63 1234567</p>
+      </div>
+      <div class="map-container">
+        <iframe src="https://maps.google.com/maps?q=Hargeisa&t=&z=13&ie=UTF8&iwloc=&output=embed" width="100%" height="250"></iframe>
+      </div>
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer class="main-footer">
+    <p>&copy; 2025 Xarago Fashion Academy</p>
+    <div class="social-picture-links">
+      <a href="#">FB</a>
+      <a href="#">IG</a>
+      <a href="#">YT</a>
+    </div>
+  </footer>
 </body>
 </html>
