--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
       <li><a href="#about">About</a></li>
       <li><a href="#portfolio">Gallery</a></li>
       <li><a href="#contact">Contact</a></li>
-      <li><a href="login.html" class="cta-mini">Login</a></li>
+      <!-- ✅ Enroll button styled with cta-mini -->
+      <li><a href="#enroll" class="cta-mini">Enroll</a></li>
     </ul>
   </nav>
 
@@ -75,13 +76,15 @@
     </div>
   </section>
 
-  <!-- Contact -->
+  <!-- Contact / Newsletter -->
   <section id="contact" class="contact-section">
     <h2>Contact Us</h2>
     <div class="contact-grid">
       <div>
         <p>Email: info@xaragoacademy.com</p>
         <p>Phone: +252 63 1234567</p>
+        <!-- ✅ Newsletter button -->
+        <button class="newsletter-btn">Subscribe to Newsletter</button>
       </div>
       <div class="map-container">
         <iframe src="https://maps.google.com/maps?q=Hargeisa&t=&z=13&ie=UTF8&iwloc=&output=embed" width="100%" height="250"></iframe>
