--- a/index.html
+++ b/index.html
@@ -74,14 +74,18 @@
   </section>
 
   <footer class="main-footer">
-    <div class="footer-content">
-      <div class="footer-logo">XARAGO ACADEMY</div>
-      <div class="social-picture-links">
-        <a href="#">IG</a>
-        <a href="#">PIN</a>
-        <a href="#">FB</a>
-        <a href="#">WA</a>
-      </div>
+  <div class="footer-content">
+    <div class="footer-logo">XARAGO ACADEMY</div>
+    
+    <div class="social-links">
+      <a href="#"><img src="assets/icon-ig.png" alt="Instagram"></a>
+      <a href="#"><img src="assets/icon-pin.png" alt="Pinterest"></a>
+      <a href="#"><img src="assets/icon-fb.png" alt="Facebook"></a>
+      <a href="#"><img src="assets/icon-wh.png" alt="WhatsApp"></a>
+    </div>
+
+    <p class="footer-tagline">Where tradition meets the future of design.</p>
+    <button class="newsletter-btn" id="openNewsletterBtn">Subscribe to Newsletter</button>
       <p class="footer-tagline">Where tradition meets the future of design.</p>
       <button class="newsletter-btn" id="openNewsletterBtn">Subscribe to Newsletter</button>
     </div>
