--- a/index.html
+++ b/index.html
@@ -36,18 +36,39 @@
       </div>
   </section>
 
-  <section id="about" class="about">
-    <div class="about-container">
-      <div class="about-text">
-        <h2>Our Philosophy</h2>
-        <p>We don't just teach you how to make clothes. We teach you how to build a brand. Our studio combines traditional techniques with modern technology.</p>
-      </div>
-      <div class="about-stats">
-        <div><span>500+</span><p>Graduates</p></div>
-        <div><span>100%</span><p>Hands-on</p></div>
+  <section id="about" class="about-modern">
+  <div class="about-wrapper">
+    <div class="about-image-side">
+      <div class="main-img" style="background-image: url('assets/pattern.jpg');"></div>
+      <div class="accent-box"></div> </div>
+
+    <div class="about-text-side">
+      <span class="section-subtitle">Our Heritage & Vision</span>
+      <h2>The Art of Precision</h2>
+      <p class="lead-text">
+        At XARAGO, we bridge the gap between traditional craftsmanship and the digital future of fashion. 
+      </p>
+      <p class="secondary-text">
+        Founded in the heart of Hargeisa, our academy is a sanctuary for designers who seek to master the architecture of clothing. From the first sketch to the final 3D prototype, we provide the tools to turn a creative vision into a global brand.
+      </p>
+
+      <div class="about-stats-grid">
+        <div class="stat-item">
+          <span class="stat-number">500+</span>
+          <span class="stat-label">Graduates</span>
+        </div>
+        <div class="stat-item">
+          <span class="stat-number">12+</span>
+          <span class="stat-label">Global Partners</span>
+        </div>
+        <div class="stat-item">
+          <span class="stat-number">100%</span>
+          <span class="stat-label">Practical</span>
+        </div>
       </div>
     </div>
-  </section>
+  </div>
+</section>
 
   <section id="portfolio" class="portfolio">
     <h2 class="section-title">Student Work</h2>
